--- a/src/main/resources/mainpage.fxml
+++ b/src/main/resources/mainpage.fxml
@@ -2,10 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckMenuItem?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
@@ -15,17 +11,17 @@
     <center>
         <VBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
             <children>
-                <TextField fx:id="firstTF">
+                <TextField fx:id="firstTF" alignment="CENTER">
                     <font>
                         <Font size="16.0" />
                     </font>
                 </TextField>
-                <TextField fx:id="secondTF">
+                <TextField fx:id="secondTF" alignment="CENTER">
                     <font>
                         <Font size="16.0" />
                     </font>
                 </TextField>
-                <TextField fx:id="transcriptionTF">
+                <TextField fx:id="transcriptionTF" alignment="CENTER">
                <font>
                   <Font size="13.0" />
                </font></TextField>
@@ -47,20 +43,6 @@
         </VBox>
     </center>
     <top>
-        <MenuBar BorderPane.alignment="CENTER">
-            <menus>
-                <Menu mnemonicParsing="false" text="File">
-                    <items>
-                        <MenuItem mnemonicParsing="false" text="Close" />
-                    </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="translation">
-                    <items>
-                        <CheckMenuItem fx:id="showTranscriptionMI" mnemonicParsing="false" onAction="#showTranscriptionClicked" text="show transcription" />
-                        <CheckMenuItem fx:id="reverseTranslationMI" mnemonicParsing="false" onAction="#reverseTranslationClicked" text="reverse translation" />
-                    </items>
-                </Menu>
-            </menus>
-        </MenuBar>
+        <fx:include source="topMenu.fxml"/>
     </top>
 </BorderPane>
